# pbg-vcell-fvsolver

./: .gitignore  README.md  pyproject.toml
demo/: composite_report.py  demo_report.py  report.html
demo/views/: cascade_B_middle.html  diffusion_A_late.html  mixing_C_early.html  mixing_C_late.html  mixing_C_middle.html
pbg_vcell_fvsolver/: __init__.py  composites.py  processes.py  visualizations.py
pbg_vcell_fvsolver/composites/: __init__.py  rd-decay-demo.composite.yaml  rd-decay-with-viz.composite.yaml
tests/: conftest.py  test_composites.py  test_processes.py
views/: cascade_B_early.html  cascade_B_late.html  diffusion_A_early.html  diffusion_A_middle.html
